Correct code editor alignment on RTL sites (props to @hagaij)

--- a/css/edit.scss
+++ b/css/edit.scss
@@ -47,6 +47,12 @@ ul.tagit {
 	background-color: #fff;
 }
 
+.CodeMirror-code {
+	outline: none;
+	direction: ltr;
+	text-align: left;
+}
+
 .CodeMirror-sizer {
 	min-height: 300px !important;
 }
